package model.strategy;

import model.shapes.Shape;

import java.util.List;

public interface LevelStrategy {
    List<Shape> generateLevel();
}
